<resources>
    <string name="app_name">Proyecto_Examen_Complexivo</string>
    <string name="title_view_login">Login</string>
    <string name="label_login_user">Usuario</string>
    <string name="label_login_clave">Contraseña</string>
    <string name="hint_login_usuario">Usuario</string>
    <string name="hint_login_clave">Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mostrar_producto">activity_mostrar_producto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_compra_producto">compra_producto</string>
    <string name="descripcion">Descripcion:</string>
    <string name="_10">10</string>
    <string name="cantidad">Cantidad:</string>
    <string name="imagen_producto_servicio">Imagen Producto/Servicio</string>
    <string name="hola_soy_una_descripcion">Hola soy una descripcion</string>
    <string name="v_unitario">V. Unitario:</string>
    <string name="_0_00">0.00</string>
    <string name="v_total">V. Total:</string>
    <string name="_0_000">0.00</string>
    <string name="todo">TODO</string>
    <string name="aaronviracocha7_gmail_com">aaronviracocha7@gmail.com</string>
    <string name="cdla_camio_ponce">Cdla Camio Ponce</string>
    <string name="cedula">Cedula:</string>
    <string name="usuario">Usuario:</string>
    <string name="lista_de_productos_o_servicios_seleccionados">Lista de Productos o Servicios seleccionados</string>
    <string name="_0107952566">0107952566</string>
    <string name="telefono">Telefono:</string>
    <string name="fecha">Fecha:</string>
    <string name="direccion">Direccion:</string>
    <string name="super_aaron_viraoccha">Super Aaron Viraoccha</string>
    <string name="correo">Correo:</string>
    <string name="_0963067447">0963067447</string>
    <string name="comprar">Finalizar Compra</string>
    <string name="cancelar_compra">Cancelar</string>
    <string name="_15_12_2022">15/12/2022</string>
    <string name="_220_25">220.25</string>
    <string name="total">Total:</string>
    <string name="facturacion">Facturacion</string>
    <string name="todo333">TODO</string>
    <string name="hint_txt_nombre">Nombre</string>
    <string name="hint_txt_apellido">Apellido</string>
    <string name="titulo_btn_sign_up_siguiente">Siguiente</string>
    <string name="title_splash">Bienvenido</string>
    <string name="sub_title_splash">Lo que tu Buscas!</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="login_txt_password">Clave</string>
    <string name="login_txt_password_repi">Confirmar Clave</string>
    <string name="login_txt_username">Usuario</string>
    <string name="detalle_de_sus_compras">Sus compras</string>
    <string name="comprar2">Comprar</string>
    <string name="cancelar2">Cancelar</string>
    <string name="total_de_sus_compras">Total de sus compras:</string>
    <string name="_120_36">120.36</string>
    <string name="Eliminar2">Eliminar</string>
    <string name="producto_o_servicio">Producto o Servicio:</string>
    <string name="totalss">Total:</string>
    <string name="_100_0">100.0</string>
    <string name="hola_mundo">Hola Mundo</string>
    <string name="hola_mundossss">Hola Mundo</string>
    <string name="descripcionsss">Descripcion:</string>
    <string name="todowwww">TODO</string>
    <string name="textview">TextView</string>
    <string name="textviewasd">TextView</string>
    <string name="textviewasdasd">TextView</string>
    <string name="textviewasdasdww">TextView</string>
    <string name="qqqq">Agregar al Carrito</string>
    <string name="todosss">TODO</string>
    <string name="cantidaddeee">Cantidad</string>
    <string name="cantidadss">Cantidad:</string>
    <string name="_1">1</string>
    <string name="serial">SERIAL</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="actualizar">Eliminar</string>
    <string name="eliminar">Eliminar</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Cancelar</string>
    <string name="action_sign_in2">Guardar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gmail">GMAIL:</string>
    <string name="editar">Editar</string>
    <string name="title_cantidad_title">Unidades Disponibles</string>

</resources>