<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".facturacion">

  <ImageView
      android:id="@+id/imgFotoPerfilUsuario"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="48dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ImageContrastCheck"
      tools:srcCompat="@tools:sample/avatars"
      android:contentDescription="@string/todo333" />

  <TextView
      android:id="@+id/txtTelefonoFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="232dp"
      android:layout_marginTop="216dp"
      android:text="@string/_0963067447"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="168dp"
      android:layout_marginTop="144dp"
      android:text="@string/correo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtUsuarioFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="228dp"
      android:layout_marginTop="48dp"
      android:text="@string/super_aaron_viraoccha"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtTotalPagar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="228dp"
      android:layout_marginTop="32dp"
      android:text="@string/_220_25"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/recyclerViewFactura" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="144dp"
      android:layout_marginTop="192dp"
      android:text="@string/total"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/recyclerViewFactura" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="152dp"
      android:layout_marginTop="116dp"
      android:text="@string/direccion"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="172dp"
      android:layout_marginTop="176dp"
      android:text="@string/fecha"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="156dp"
      android:layout_marginTop="216dp"
      android:text="@string/telefono"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtCedulaFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="228dp"
      android:layout_marginTop="80dp"
      android:text="@string/_0107952566"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="264dp"
      android:text="@string/lista_de_productos_o_servicios_seleccionados"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="160dp"
      android:layout_marginTop="48dp"
      android:text="@string/usuario"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="164dp"
      android:layout_marginTop="80dp"
      android:text="@string/cedula"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtCorreoFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="228dp"
      android:layout_marginTop="144dp"
      android:text="@string/aaronviracocha7_gmail_com"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtDireccionFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="228dp"
      android:layout_marginTop="116dp"
      android:text="@string/cdla_camio_ponce"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnComprarFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="572dp"
      android:text="@string/comprar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.487"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewFactura"
      android:layout_width="393dp"
      android:layout_height="166dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.618"
      tools:listitem="@layout/item_productos_facturacion" />

  <TextView
      android:id="@+id/txtFechaFacturacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="232dp"
      android:layout_marginTop="176dp"
      android:text="@string/_15_12_2022"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView23"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/facturacion"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.456"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>