<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/imgFotoDetalleCompras"
            android:layout_width="136dp"
            android:layout_height="135dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todowwww"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"/>

    <TextView
            android:id="@+id/txtPrecioProductoDetalleCompras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="244dp"
            android:layout_marginTop="144dp"
            android:text="@string/_100_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="16dp"
            android:text="@string/producto_o_servicio"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/txtNombreProductoDetalleCompras"
            android:layout_width="218dp"
            android:layout_height="25dp"
            android:layout_marginStart="176dp"
            android:layout_marginTop="40dp"
            android:text="@string/hola_mundossss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="72dp"
            android:text="@string/descripcionsss"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:text="@string/totalss"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="144dp"/>

    <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="172dp"
            android:text="@string/cantidadss"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/txtCantidadProductaDeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="252dp"
            android:layout_marginTop="172dp"
            android:text="@string/_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/txtDescripcionDetalleCompras"
            android:layout_width="222dp"
            android:layout_height="39dp"
            android:layout_marginStart="176dp"
            android:layout_marginTop="96dp"
            android:text="@string/hola_mundo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/txtId_Producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/serial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFotoDetalleCompras" android:layout_marginTop="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>