<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicioDetalle">

    <Button
        android:id="@+id/btnGuardarServicioCarrito"
        android:layout_width="291dp"
        android:layout_height="58dp"
        android:layout_marginTop="512dp"
        android:text="@string/qqqq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrecio_Servicio3"
        android:layout_width="297dp"
        android:layout_height="41dp"
        android:layout_marginTop="216dp"
        android:text="@string/textviewasd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombre_Servicio"
        android:layout_width="297dp"
        android:layout_height="41dp"
        android:layout_marginTop="168dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFotoServicio"
        android:layout_width="248dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todosss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtDescripcionServicio3"
        android:layout_width="300dp"
        android:layout_height="95dp"
        android:layout_marginTop="272dp"
        android:text="@string/textviewasdasd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>